# trabfinal_persistencia_2025.1

./: .env.example  README.md  pyproject.toml  requirements.txt
DADOS/: amostra_participantes.csv  carregarDados.py
app/models/: base.py  escola.py  municipio.py  participante.py  prova_item.py  questionario.py  resultado.py
src/: main.py
src/config/: logs.py  settings.py
src/data/: amostra_resultados.csv
src/infra/repositories/: __init__.py  area_conhecimento_repository.py  base_repository.py  escola_repository.py  municipio_repository.py  participante_area_repository.py  participante_repository.py  resultado_repository.py
src/infra/settings/: database.py
src/models/: area_conhecimento.py  base.py  escola.py  municipio.py  participante.py  prova_item.py  questionario.py  resultado.py
src/routes/: __init__.py  admin_router.py  areas_router.py  escola_router.py  escola_routes.py  municipio_router.py  municipio_routes.py  participante_router.py  resultado_router.py  resultado_routes.py
src/schemas/: __init__.py  area_schemas.py  escola_schemas.py  municipio_schemas.py  participante_schemas.py  response_schemas.py  resultado_schemas.py
src/scripts/: load_data.py
src/services/: area_conhecimento_service.py  escola_service.py  municipio_service.py  participante_service.py  resultado_service.py
src/utils/: json_utils.py
